resources/docs/5.x/what-is-nylo.md
# What is {{ config('app.name') }}?

---

<a name="section-1"></a>
- [Introduction](#introduction "Introduction")
- App Development
	- [New to Flutter?](#new-to-flutter "New to Flutter?")
	- [Maintenance and release schedule](#maintenance-and-release-schedule "Maintenance and release schedule")
- Credits
	- [Framework Dependencies](#framework-dependencies "Framework Dependencies")
	- [Contributors](#contributors "Contributors")


<div id="introduction"></div>
<br>
## Introduction

{{ config('app.name') }} is a micro-framework for Flutter which is designed to help simplify app development. Every project provides a simple boilerplate to help you build apps easier. {{ config('app.name') }} is an open source and MIT-licenced too, so you can freely build your projects.

New installs of {{ config('app.name') }} contain standardized file structure and config, so you can jump straight into developing your project.

<div id="new-to-flutter"></div>
<br>

## New to Flutter?

A great place to start learning Flutter is through the <a href="https://flutter.dev" target="_BLANK">Flutter website</a>. 
They have tons of documentation to help you understand how things work from the core. 

You can also subscribe to their YouTube <a href="https://www.youtube.com/c/flutterdev/featured" target="_BLANK">channel</a> for updates, tutorials and information on Flutter.


<div id="maintenance-and-release-schedule"></div>
<br>

## Maintenance and release schedule

The release schedule for {{ config('app.name') }} will be once or twice a year if there are breaking changes in the upcoming releases. Bugs will be dealt with ad hoc via the GitHub repositories.

The {{ config('app.name') }} framework and support repository follow <a href="https://semver.org" target="_BLANK">Semantic Versioning</a>.

<div id="framework-dependencies"></div>
<br>

## Framework dependencies

{{ config('app.name') }}'s <a href="https://github.com/nylo-core/framework" target="_BLANK">framework</a> + <a href="https://github.com/nylo-core/support" target="_BLANK">support</a> library use the below open source libraries:

- [url\_launcher](https://pub.dev/packages/url_launcher)
- [google\_fonts](https://pub.dev/packages/google_fonts)
- [flutter\_launcher\_icons](https://pub.dev/packages/flutter_launcher_icons)
- [theme\_provider](https://pub.dev/packages/theme_provider)
- [intl](https://pub.dev/packages/intl)
- [flutter\_secure\_storage](https://pub.dev/packages/flutter_secure_storage)
- [flutter\_dotenv](https://pub.dev/packages/flutter_dotenv)
- [page\_transition](https://pub.dev/packages/page_transition)
- [args](https://pub.dev/packages/args)
- [analyzer](https://pub.dev/packages/analyzer)
- [recase](https://pub.dev/packages/recase)
- [dio](https://pub.dev/packages/dio)
- [validated](https://pub.dev/packages/validated)
- [flutter\_styled\_toast](https://pub.dev/packages/flutter_styled_toast)
- [animate_do](https://pub.dev/packages/animate_do)
- [collection](https://pub.dev/packages/collection)
- [flutter](https://github.com/flutter/flutter)
- [equatable](https://pub.dev/packages/equatable)
- [flutter_dotenv](https://pub.dev/packages/flutter_dotenv)
- [pull_to_refresh_flutter3](https://pub.dev/packages/pull_to_refresh_flutter3)
- [rxdart](https://pub.dev/packages/rxdart)
- [pretty\_dio\_logger](https://pub.dev/packages/pretty_dio_logger)

<div id="contributors"></div>
<br>

## Contributors

Here's a shout out to the contributors who have helped build {{ config('app.name') }}! If you've contributed, reach out via <a href="mailto:support@nylo.dev">support@nylo.dev</a> to request us to add you here.

- <a href="https://github.com/agordn52" target="_blank">Anthony Gordon (Creator)</a>
- <a href="https://github.com/Abdulrasheed1729" target="_blank">Abdulrasheed1729</a>
- <a href="https://github.com/Rashid-Khabeer" target="_blank">Rashid-Khabeer</a>
- <a href="https://github.com/lpdevit" target="_blank">lpdevit</a>
- <a href="https://github.com/youssefKadaouiAbbassi" target="_blank">youssefKadaouiAbbassi</a>
